Build v1.26010222: Metadata and Assets

--- a/.github/funding.yml
+++ b/.github/funding.yml
@@ -1,2 +1,2 @@
-github: [thisismyurl]
-custom: ["https://thisismyurl.com/avif-support-thisismyurl/#register"]
+github: [thisismyurl] # Your GitHub username
+custom: ["https://thisismyurl.com/#register"] # Your direct donation link
